[gd_scene load_steps=3 format=3 uid="uid://c6ypqlltm2tye"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_641u5"]

[sub_resource type="LabelSettings" id="LabelSettings_1dnwu"]
font_size = 100
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_641u5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -140.0
offset_right = 250.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.870588)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -39.0
offset_right = 647.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(-300, -140)
text = "Game Paused"
label_settings = SubResource("LabelSettings_1dnwu")
metadata/_edit_use_anchors_ = true

[node name="Resume" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -23.0
offset_right = 431.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
theme_override_font_sizes/font_size = 100
text = "Resume"
metadata/_edit_use_anchors_ = true

[node name="Restart" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 35.0
offset_right = 452.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.22, 0.22)
theme_override_font_sizes/font_size = 100
text = "Restart"
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = 80.0
offset_right = 497.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 100
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
